<resources>
    <string name="app_name">Calculator</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="bs">BS</string>
    <string name="div">/</string>
    <string name="num_7">7</string>
    <string name="num_9">9</string>
    <string name="num_8">8</string>
    <string name="mul">X</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="minus">-</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="plus">+</string>
    <string name="sign">+/-</string>
    <string name="num_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>