<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:backgroundTint="@android:color/darker_gray"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_ce"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:padding="8dp"
                android:text="@string/ce"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_c"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_bs"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/bs"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_div"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/div"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_7"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_7"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_8"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_9"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_mul"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/mul"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_4"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_5"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_6"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_1"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_2"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_3"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_sign"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/sign"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/system_neutral1_200"
                android:text="@string/num_0"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/dot"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>